# fast-api-cinematica-project

./: .gitignore  alembic.ini  main.py  pyproject.toml
apps/: routes.py
apps/base/utils/: db.py
apps/cinema/: api.py  models.py  repository.py  schema.py
apps/movie/: api.py  models.py  repository.py  schema.py
apps/payment/: api.py  models.py  repository.py  schema.py
apps/rent/: api.py  models.py  repository.py  schema.py
apps/user/: api.py  auth_bearer.py  models.py  repository.py  schemas.py  utils.py
core/: base.py  local_config.py  settings.py
db/: session.py
migrations/: env.py
migrations/versions/: 45fb48972a00_add_payment2.py  629ae8444c69_added_cinema_table_2.py  85720dd8496e_added_in_rent_column_status.py  a56085c3aa33_add_payment_3.py  ba6a76c9f293_add_payment.py  cfd833170123_added_cinema_table_4.py  d1f252b85996_added_movie_and_rent_model.py  d947764182f5_add_payment_4.py  eae724c60622_added_cinema_table.py
