[tool.poetry]
name = "fast-api-project"
version = "0.1.0"
description = ""
authors = ["muratbek2255 <muratbek2255@gmail.com>"]
readme = "README.md"
packages = [{include = "fast_api_project"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = {extras = ["all"], version = "^0.95.1"}
ormar = {extras = ["postgresql"], version = "^0.12.1"}
alembic = "^1.10.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
